2003-11-19  Justin F. Hallett  <thesin@users.sourceforge.net>

	* PkgVersion.pm: Adding initial code to add 'Installed-Size' to
	CONTROL, should be converted to a perl code instead of using du.

2003-11-19  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* Package.pm (is_any_present): Add new subroutine, returns 1 if a deb
	is available locally, 0 if not.
	* Engine.pm (real_install): Allow use of a regex in fink.conf to auto-
	choose which package to install. When asking the user to make a choice
	set the selection to an available deb, if there is only one.

2003-11-18  Michael G Schwern  <schwern@pobox.com>

	* Package.pm: Write the new index atomicly to avoid a corrupted
	index should fink be killed in the middle of reindexing.

2003-11-16  Rob Braun <bbraun@users.sourceforge.net>

	* SelfUpdate.pm: Fix a problem with syncing the crypto/ directory,
	  since it doesn't have subdirectories like main/ does.

2003-11-16  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: When installing into a pre-release darwin 7.x, say
	that it "should work".

2003-11-16  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: More changes, split up system-xfree86 into
	  system-xfree86, system-xfree86-shlibs, and system-xfree86-dev.

2003-11-16  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Totally reworked the provides of the system-xfree86
	  virtual packages, so that "x11" is provided when the shared libraries
	  and an X server are present, and "x11-dev" is provided when headers
	  and development libraries are present.  This will require changes to
	  the BuildDepends: of all x11-using packages.  This is a major change
	  (considering how many files it will end up touching) so this change
	  is going into HEAD.

2003-11-16  Rob Braun <bbraun@users.sourceforge.net>

	* SelfUpdate.pm: Add --delete since it is not implied by 
	  --delete-after on older versions of rsync (10.2).
