@@ -1,3 +1,11 @@
+2003-11-19  Benjamin Reed  <rangerrick@users.sourceforge.net>
+
+	* PkgVersion.pm: Don't generate prebinding references if the package
+	is forcibly not prebound. (and some general cleanup and whitespace
+	fixes)
+	* Validation.pm: Added some missing Set* flags to the validation,
+	related to LD and prebinding.
+
 2003-11-19  Justin F. Hallett  <thesin@users.sourceforge.net>
 
 	* PkgVersion.pm: Adding initial code to add 'Installed-Size' to
